our partners animation duration increase, roadmap alignment fixed

--- a/client/components/Home/OurPartners/OurPartners.module.css
+++ b/client/components/Home/OurPartners/OurPartners.module.css
@@ -27,7 +27,7 @@
   width: 100%;
   height: 200px;
   cursor: pointer;
-  transition: all linear 0.8s;
+  transition: all linear 1s;
 }
 
 .PartnerOneTree {
@@ -38,7 +38,7 @@
   width: 100%;
   height: 200px;
   cursor: pointer;
-  transition: all linear 0.8s;
+  transition: all linear 1s;
 }
 
 .PartnerBikeRentals {
@@ -49,7 +49,7 @@
   width: 100%;
   height: 200px;
   cursor: pointer;
-  transition: all linear 0.8s;
+  transition: all linear 1s;
 }
 
 .PartnerGivepower {
@@ -60,7 +60,7 @@
   width: 100%;
   height: 200px;
   cursor: pointer;
-  transition: all linear 0.8s;
+  transition: all linear 1s;
 }
 
 .PartnerBrangerine:hover {
